syntax = "proto3";

package eCommerce.UserService.v1;
option csharp_namespace = "eCommerce.UserService.Protos.V1";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterUserResponse {
    bool success = 1;
    repeated string errors = 2;
}

service AuthService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}